--- a/pact-broker/templates/deployment.yaml
+++ b/pact-broker/templates/deployment.yaml
@@ -32,7 +32,7 @@ spec:
           - name: PACT_BROKER_PUBLIC_HEARTBEAT
             value: 'true'
           - name: PACT_BROKER_LOG_LEVEL
-            value: DEBUG
+            value: WARN
         resources:
           requests:
             memory: {{ required "memoryRequests " .Values.memoryRequests  }}
