--- a/ci-values.yaml
+++ b/ci-values.yaml
@@ -1,3 +1,2 @@
-image: hmcts.azurecr.io/hmcts/spring-boot-template
-ingressHost: chart-java.service.core-compute-preview.internal
+ingressHost: chart-pact-broker.service.core-compute-preview.internal
 
