--- a/ci-values.yaml
+++ b/ci-values.yaml
@@ -1,2 +1,2 @@
 ingressHost: chart-pact-broker.service.core-compute-preview.internal
-resourceGroup: pact-broker-mgmt
+resourceGroup: pact-broker-chart-tests
