Increase timeouts for osba

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,6 +25,8 @@ jobs:
       chartName: pact-broker
       chartReleaseName: chart-pact-broker-ci-test
       chartNamespace: chart-tests
+      helmInstallTimeout: "600"
+      helmDeleteWait: "60"
 
 - job: Release
   # Make sure we have a tag to run this job
