--- a/pact-broker/templates/osba-db-instance.yaml
+++ b/pact-broker/templates/osba-db-instance.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.databaseType "osba" }}}}
 ---
 #
 # Service Catalog Postgresql Instance
@@ -25,3 +26,4 @@ spec:
     name: {{ .Release.Name }}-postgresql-instance
   secretName: {{ .Release.Name }}-postgresql-config
 ---
+{{- end }}
