Update db resources config

--- a/ci-values.yaml
+++ b/ci-values.yaml
@@ -5,5 +5,12 @@ postgresql:
   postgresqlUsername: hmcts
   postgresqlPassword: hmcts
   postgresqlDatabase: hmcts
+  resources:
+    requests:
+      cpu: 25m
+      memory: 32Mi
+    limits:
+      cpu: 250m
+      memory: 256Mi
   persistence:
     enabled: false
