--- a/pact-broker/values.yaml
+++ b/pact-broker/values.yaml
@@ -1,9 +1,12 @@
+subscriptionId: "bf308a5c-0624-4334-8ff8-8dca9fd43783"
+tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
+
 applicationPort: 80
 memoryRequests: '512Mi'
 cpuRequests: '100m'
 memoryLimits: '1024Mi'
 cpuLimits: '2500m'
-ingressHost: pact-broker.service.core-compute-saat.internal
+ingressHost: sandbox-pact-broker.platform.hmcts.net
 readinessPath: '/diagnostic/status/heartbeat'
 readinessDelay: 30
 readinessTimeout: 3
@@ -17,5 +20,7 @@ livenessFailureThreshold: 3
 databaseType: external   # external, pod, osba. Note: for pod the 'postgresql-pod' tag below needs to be true
 tags:
   postgresql-pod: false
+postgresqlHost: "pact-broker-mgmt-sandbox.postgres.database.azure.com"
+postgresqlDatabase: "pact"
 resourceGroup: pact-broker-sandbox-mgmt   # osba only
 postgresqlPlan: general-purpose   # osba only
