--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ resources:
   - repository: cnp-library
     type: github
     name: hmcts/cnp-azuredevops-libraries
-    endpoint: 'HMCTS Github'
+    endpoint: 'hmcts'
 
 jobs:
 - job: Validate
