--- a/pact-broker/values.yaml
+++ b/pact-broker/values.yaml
@@ -1,8 +1,8 @@
 subscriptionId: "bf308a5c-0624-4334-8ff8-8dca9fd43783"
 tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
 
-applicationPort: 9292
-image: pactfoundation/pact-broker:2.58.2.3
+applicationPort: 80
+image: dius/pact-broker:2.58.2.0
 memoryRequests: '512Mi'
 cpuRequests: '100m'
 memoryLimits: '1024Mi'
