--- a/pact-broker/Chart.yaml
+++ b/pact-broker/Chart.yaml
@@ -1,10 +1,16 @@
-apiVersion: v1
+apiVersion: v2
 description: A Helm chart for HMCTS Pact broker deployment
 name: pact-broker
-version: 0.2.1
+version: 0.3.0
 icon: https://github.com/hmcts/chart-java/raw/master/images/icons8-java-50.png
 keywords:
   - pact
   - broker
   - client driven contracts
   - CDC
+dependencies:
+  - name: postgresql
+    version: 8.9.8
+    repository: https://charts.bitnami.com/bitnami
+    tags:
+      - postgresql-pod
