--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,10 +15,14 @@ resources:
     name: hmcts/cnp-azuredevops-libraries
     endpoint: 'hmcts'
 
+variables:
+  - name: agentPool
+    value: ubuntu-18.04
+
 jobs:
 - job: Validate
   pool:
-    vmImage: 'Ubuntu 16.04'
+    vmImage: ${{ variables.agentPool }}
   steps:
   - template: steps/charts/validate.yaml@cnp-library
     parameters:
@@ -37,7 +41,7 @@ jobs:
       )
   dependsOn: Validate
   pool:
-    vmImage: 'Ubuntu 16.04'
+    vmImage: ${{ variables.agentPool }}
   steps:
   - template: steps/charts/release.yaml@cnp-library
     parameters:
