--- a/pact-broker/templates/ingress.yaml
+++ b/pact-broker/templates/ingress.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ .Release.Name }}
@@ -13,6 +13,9 @@ spec:
     http:
       paths:
       - path: /
+        pathType: Prefix
         backend:
-          serviceName: {{ .Release.Name }}
-          servicePort: 80
+          service:
+            name: {{ .Release.Name }}
+            port:
+              number: 80
