--- a/pact-broker/templates/ingress.yaml
+++ b/pact-broker/templates/ingress.yaml
@@ -7,6 +7,12 @@ metadata:
     {{- ( include "labels" . ) | indent 4 }}
   annotations:
     kubernetes.io/ingress.class: traefik
+    {{ if .Values.enableTls true }}
+    traefik.ingress.kubernetes.io/router.tls: "true"
+    {{ else }}
+    traefik.ingress.kubernetes.io/router.tls: "false"
+    {{ end }}
+    
 spec:
   rules:
   - host: {{ required "ingressHost" .Values.ingressHost }}
