--- a/pact-broker/templates/ingress.yaml
+++ b/pact-broker/templates/ingress.yaml
@@ -7,11 +7,11 @@ metadata:
     {{- ( include "labels" . ) | indent 4 }}
   annotations:
     kubernetes.io/ingress.class: traefik
-  {{ if .Values.enableTls true }}
+    {{ if eq .Values.enableTls true }}
     traefik.ingress.kubernetes.io/router.tls: "true"
-  {{ else }}
+    {{ else }}
     traefik.ingress.kubernetes.io/router.tls: "false"
-  {{ end }}
+    {{ end }}
     
 spec:
   rules:
