DTSPO-11878 Pass through full username to chart

--- a/pact-broker/templates/deployment.yaml
+++ b/pact-broker/templates/deployment.yaml
@@ -31,7 +31,7 @@ spec:
         command:
           - "/bin/sh"
           - "-c"
-          - "export PACT_BROKER_DATABASE_USERNAME=$(cat /kvmnt/pact-db-user)@{{- required "postgresql.postgresqlServerName " .Values.postgresqlServerName -}}; export PACT_BROKER_DATABASE_PASSWORD=$(cat /kvmnt/pact-db-password); /sbin/my_init"
+          - "export PACT_BROKER_DATABASE_USERNAME=$(cat /kvmnt/pact-db-user); export PACT_BROKER_DATABASE_PASSWORD=$(cat /kvmnt/pact-db-password); /sbin/my_init"
         volumeMounts:
         - name: kvcreds
           mountPath: /kvmnt
