--- a/pact-broker/values.yaml
+++ b/pact-broker/values.yaml
@@ -22,7 +22,7 @@ enableTls: true
 databaseType: external   # external, pod, osba. Note: for pod the 'postgresql-pod' tag below needs to be true
 tags:
   postgresql-pod: false
-postgresqlHost: "pact-broker-mgmt-sandbox.postgres.database.azure.com"
+postgresqlHost: "cft-pact-broker-ptlsbox.postgres.database.azure.com"
 postgresqlDatabase: "pact"
 resourceGroup: pact-broker-mgmt-sandbox   # osba only
 postgresqlPlan: general-purpose   # osba only
