--- a/pact-broker/templates/secretproviderclass.yaml
+++ b/pact-broker/templates/secretproviderclass.yaml
@@ -1,3 +1,5 @@
+{{- $namespace := .Release.Namespace -}}
+{{- $serviceAccount := (lookup "v1" "ServiceAccount" $namespace $namespace ) }}
 {{- if eq .Values.databaseType "external" }}
 apiVersion: secrets-store.csi.x-k8s.io/v1alpha1
 kind: SecretProviderClass
@@ -15,6 +17,11 @@ spec:
           objectName: pact-db-password
           objectType: secret
     tenantId: {{ .Values.tenantId }}
-    usePodIdentity: "true"
+  {{- if and .Values.useWorkloadIdentity $serviceAccount $serviceAccount.metadata $serviceAccount.metadata.annotations }}
+  {{- $clientId := (index $serviceAccount.metadata.annotations "azure.workload.identity/client-id" )}}
+    clientID: {{ $clientId }}
+  {{- else }}
+    usePodIdentity: "true" 
+  {{- end }}
   provider: azure
 {{- end }}
