--- a/pact-broker/values.yaml
+++ b/pact-broker/values.yaml
@@ -18,6 +18,7 @@ livenessTimeout: 3
 livenessPeriod: 15
 livenessFailureThreshold: 3
 enableTls: true
+useWorkloadIdentity: true
 
 databaseType: external   # external, pod, osba. Note: for pod the 'postgresql-pod' tag below needs to be true
 tags:
