Required update to cnp-azuredevops-libraries repository to facilitate upstream improvements

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ pr:
     - master
 resources:
   repositories:
-  - repository: cnp-library
+  - repository: cnp-azuredevops-libraries
     type: github
     name: hmcts/cnp-azuredevops-libraries
     endpoint: 'hmcts'
@@ -24,7 +24,7 @@ jobs:
   pool:
     vmImage: ${{ variables.agentPool }}
   steps:
-  - template: steps/charts/validate.yaml@cnp-library
+  - template: steps/charts/validate.yaml@cnp-azuredevops-libraries
     parameters:
       chartName: pact-broker
       chartReleaseName: chart-pact-broker-ci-test
@@ -43,7 +43,7 @@ jobs:
   pool:
     vmImage: ${{ variables.agentPool }}
   steps:
-  - template: steps/charts/release.yaml@cnp-library
+  - template: steps/charts/release.yaml@cnp-azuredevops-libraries
     parameters:
       chartName: pact-broker
       chartReleaseName: chart-pact-broker
